k3s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: world-tracker-ingress
  namespace: world-tracker
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
    - host: world.slax.ro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: world-tracker
                port:
                  number: 80
